--- a/Twix.Web/App/Views/Login.html
+++ b/Twix.Web/App/Views/Login.html
@@ -1,10 +1,8 @@
-﻿test log in
-
+﻿
 <div class="col-md-4 col-md-offset-4" ng-controller="LoginController">
-    <h2>Sign Up</h2>
+    <h2>Log In</h2>
     Username: <input type="text" ng-model="Username"/> <br />
-    First name: <input type="text" ng-model="Firstname"/> <br />
-    Last Name: <input type="text" ng-model="Lastname" /> <br />
     Password: <input type="text" ng-model="Password" /> <br />
-    <input type="submit" value="Create User" ng-click="userCreate();" />
+    <input type="submit" value="Log In" ng-click="LoginAttempt();" />
+    <a href="/App/index.html#/"><input type="button" value="Return to Welcome" /></a>
 </div>
